Always position the toolbar inside the map borders Constraint on the polygon vertex removal Constraint on the polygon creation Allow zooming during the polygon creation Fixed toolbar event handling Fixed stuck panning after the polygon creation

--- a/common.css
+++ b/common.css
@@ -49,7 +49,6 @@ input.flattext {
     border-radius: 2px;
 }
 .toolbar {
-    margin: 5px;
     display: none;
     position: absolute;
     left: 0px;
